--- a/ihome/static/html/detail.html
+++ b/ihome/static/html/detail.html
@@ -22,95 +22,103 @@
             </div>
         </div>
         <div class="swiper-container">
-            <ul class="swiper-wrapper">
-                <li class="swiper-slide"><img src="/static/images/home01.jpg"></li>
-                <li class="swiper-slide"><img src="/static/images/home02.jpg"></li>
-                <li class="swiper-slide"><img src="/static/images/home03.jpg"></li>
-            </ul>
-            <div class="swiper-pagination"></div>
-            <div class="house-price">￥<span>300</span>/晚</div>
+            <script id="house-image-tmpl" type="text/html">
+                <ul class="swiper-wrapper">
+                    {{ each image_urls as image_url }}
+                    <li class="swiper-slide"><img src="{{ image_url }}"></li>
+                    {{ /each }}
+                </ul>
+                <div class="swiper-pagination"></div>
+                <div class="house-price">￥<span>{{ (price/100.0).toFixed(0) }}</span>/晚</div>
+            </script>
         </div>
-        <div class="detail-con">
+        <div class="detail-con"></div>
+        <script id="house-detail-tmpl" type="text/html">
             <div class="detail-header layout-style">
-                <h2 class="house-title">房屋标题</h2> 
-                <div class="landlord-pic"><img src="/static/images/landlord01.jpg"></div>
-                <h2 class="landlord-name">房东： <span>房东姓名</span></h2>
+                <h2 class="house-title">{{ house.title }}</h2>
+                <div class="landlord-pic"><img src="{{ house.user_avatar }}"></div>
+                <h2 class="landlord-name">房东： <span>{{ house.user_name }}</span></h2>
             </div>
             <div class="house-info layout-style">
-               <h3>房屋地址</h3>
+               <h3>地址</h3>
                <ul class="house-info-list text-center">
-                    <li>地址内容中关村</li>
+                    <li>{{ house.address }}</li>
                </ul>
             </div>
             <ul class="house-type layout-style">
                 <li>
                     <span class="icon-house"></span>
                     <div class="icon-text">
-                        <h3>出租6间</h3>
-                        <p>房屋面积:200平米</p> 
-                        <p>房屋户型:三室两厅两卫</p>
+                        <h3>出租{{ house.room_count }}间</h3>
+                        <p>房屋面积:{{ house.acreage }}平米</p>
+                        <p>房屋户型:{{ house.unit }}</p>
                     </div>
                 </li>
                 <li>
                     <span class="icon-user"></span>
                     <div class="icon-text">
-                        <h3>宜住10人</h3>
+                        <h3>宜住{{ house.capacity }}人</h3>
                     </div>
                 </li>
                 <li>
                     <span class="icon-bed"></span>
                     <div class="icon-text">
                         <h3>卧床配置</h3>
-                        <p>双人床两张</p>
+                        <p>{{ house.beds }}</p>
                     </div>
                 </li>
             </ul> 
             <div class="house-info layout-style">
                 <h3>房间详情</h3>
                 <ul class="house-info-list">
-                    <li>收取押金<span>2000</span></li>
-                    <li>最少入住天数<span>1</span></li>
-                    <li>最多入住天数<span>无限制</span></li>
+                    <li>收取押金<span>{{ (house.deposit/100.0).toFixed(0) }}</span></li>
+                    <li>最少入住天数<span>{{ house.min_days }}</span></li>
+                    <li>最多入住天数<span>{{if house.max_days==0}}无限制{{else}}{{house.max_days}}{{/if}}</span></li>
                 </ul>
             </div>
             <div class="house-facility layout-style">
                 <h3>配套设施</h3>
                 <ul class="house-facility-list clearfix">
-                    <li><span class="wirelessnetwork-ico"></span>无线网络</li>
-                    <li><span class="shower-ico"></span>热水淋浴</li>
-                    <li><span class="aircondition-ico"></span>空调</li>
-                    <li><span class="heater-ico"></span>暖气</li>
-                    <li><span class="smoke-ico"></span>允许吸烟</li>
-                    <li><span class="drinking-ico"></span>饮水设备</li>
-                    <li><span class="brush-ico"></span>牙具</li>
-                    <li><span class="soap-ico"></span>香皂</li>
-                    <li><span class="slippers-ico"></span>拖鞋</li>
-                    <li><span class="toiletpaper-ico"></span>手纸</li>
-                    <li><span class="towel-ico"></span>毛巾</li>
-                    <li><span class="toiletries-ico"></span>沐浴露、洗发露</li>
-                    <li><span class="icebox-ico"></span>冰箱</li>
-                    <li><span class="washer-ico"></span>洗衣机</li>
-                    <li><span class="elevator-ico"></span>电梯</li>
-                    <li><span class="iscook-ico"></span>允许做饭</li>
-                    <li><span class="pet-ico"></span>允许带宠物</li>
-                    <li><span class="meet-ico"></span>允许聚会</li>
-                    <li><span class="accesssys-ico"></span>门禁系统</li>
-                    <li><span class="parkingspace-ico"></span>停车位</li>
-                    <li><span class="wirednetwork-ico"></span>有线网络</li>
-                    <li><span class="tv-ico"></span>电视</li>
-                    <li><span class="jinzhi-ico"></span>浴缸</li>
+                    <li><span class="{{if house.facilities.indexOf(1)>=0}}wirelessnetwork-ico{{else}}jinzhi-ico{{/if}}"></span>无线网络</li>
+                    <li><span class="{{if house.facilities.indexOf(2)>=0}}shower-ico{{else}}jinzhi-ico{{/if}}"></span>热水淋浴</li>
+                    <li><span class="{{if house.facilities.indexOf(3)>=0}}aircondition-ico{{else}}jinzhi-ico{{/if}}"></span>空调</li>
+                    <li><span class="{{if house.facilities.indexOf(4)>=0}}heater-ico{{else}}jinzhi-ico{{/if}}"></span>暖气</li>
+                    <li><span class="{{if house.facilities.indexOf(5)>=0}}smoke-ico{{else}}jinzhi-ico{{/if}}"></span>允许吸烟</li>
+                    <li><span class="{{if house.facilities.indexOf(6)>=0}}drinking-ico{{else}}jinzhi-ico{{/if}}"></span>饮水设备</li>
+                    <li><span class="{{if house.facilities.indexOf(7)>=0}}brush-ico{{else}}jinzhi-ico{{/if}}"></span>牙具</li>
+                    <li><span class="{{if house.facilities.indexOf(8)>=0}}soap-ico{{else}}jinzhi-ico{{/if}}"></span>香皂</li>
+                    <li><span class="{{if house.facilities.indexOf(9)>=0}}slippers-ico{{else}}jinzhi-ico{{/if}}"></span>拖鞋</li>
+                    <li><span class="{{if house.facilities.indexOf(10)>=0}}toiletpaper-ico{{else}}jinzhi-ico{{/if}}"></span>手纸</li>
+                    <li><span class="{{if house.facilities.indexOf(11)>=0}}towel-ico{{else}}jinzhi-ico{{/if}}"></span>毛巾</li>
+                    <li><span class="{{if house.facilities.indexOf(12)>=0}}toiletries-ico{{else}}jinzhi-ico{{/if}}"></span>沐浴露、洗发露</li>
+                    <li><span class="{{if house.facilities.indexOf(13)>=0}}icebox-ico{{else}}jinzhi-ico{{/if}}"></span>冰箱</li>
+                    <li><span class="{{if house.facilities.indexOf(14)>=0}}washer-ico{{else}}jinzhi-ico{{/if}}"></span>洗衣机</li>
+                    <li><span class="{{if house.facilities.indexOf(15)>=0}}elevator-ico{{else}}jinzhi-ico{{/if}}"></span>电梯</li>
+                    <li><span class="{{if house.facilities.indexOf(16)>=0}}iscook-ico{{else}}jinzhi-ico{{/if}}"></span>允许做饭</li>
+                    <li><span class="{{if house.facilities.indexOf(17)>=0}}pet-ico{{else}}jinzhi-ico{{/if}}"></span>允许带宠物</li>
+                    <li><span class="{{if house.facilities.indexOf(18)>=0}}meet-ico{{else}}jinzhi-ico{{/if}}"></span>允许聚会</li>
+                    <li><span class="{{if house.facilities.indexOf(19)>=0}}accesssys-ico{{else}}jinzhi-ico{{/if}}"></span>门禁系统</li>
+                    <li><span class="{{if house.facilities.indexOf(20)>=0}}parkingspace-ico{{else}}jinzhi-ico{{/if}}"></span>停车位</li>
+                    <li><span class="{{if house.facilities.indexOf(21)>=0}}wirednetwork-ico{{else}}jinzhi-ico{{/if}}"></span>有线网络</li>
+                    <li><span class="{{if house.facilities.indexOf(22)>=0}}tv-ico{{else}}jinzhi-ico{{/if}}"></span>电视</li>
+                    <li><span class="{{if house.facilities.indexOf(23)>=0}}hotbathtub-ico{{else}}jinzhi-ico{{/if}}"></span>浴缸</li>
                 </ul>
             </div> 
+            {{if house.comments }}
             <div class="house-info layout-style">
                 <h3>评价信息</h3>
                 <ul class="house-comment-list">
+                    {{ each house.comments as comment}}
                     <li>
-                        <p>用户名<span class="fr">2016-11-11 20:00:00</span></p>
-                        <p>感觉不错</p>
+                        <p>{{comment.user_name}}<span class="fr">{{comment.ctime}}</span></p>
+                        <p>{{comment.comment}}</p>
                     </li>
+                    {{/each}}
                 </ul>
             </div>
-        </div>
+            {{/if}}
+        </script>
+
         <a class="book-house" href="">即刻预定</a>
         <div class="footer">
             <p><span><i class="fa fa-copyright"></i></span>爱家租房&nbsp;&nbsp;享受家的温馨</p>
